Fixes scrolling overflow for IE

--- a/map-styles/style.css
+++ b/map-styles/style.css
@@ -1,6 +1,7 @@
 #usa-map {
 	width: 720px;
 	margin: 30px auto;
+  overflow: hidden;
 }
 
 svg {
